--- a/src/App.css
+++ b/src/App.css
@@ -552,9 +552,13 @@ html {
 }
 
 .Introduce__footer-icon {
-    font-size: 5rem;
+    font-size: 4.5rem;
     color: var(--main-color-bold);
     margin: 0 10px;
+}
+
+.logoInIntroduce {
+    height: 400px;
 }
 
 
@@ -769,7 +773,6 @@ html {
 }
 
 /*Form*/
-/*form*/
 .form_page {
 
 }
@@ -877,3 +880,31 @@ small {
     background-color: #ebebed;
 }
 
+
+/*Add Room*/
+
+.form__addroom-group {
+    margin-bottom: 24px;
+
+}
+
+.form__addRoom-label {
+    color: var(--main-color);
+    margin-top: 10px;
+    font-size: 1.4rem;
+    outline: none;
+    margin-right: 12px;
+    padding-left: 40px;
+
+}
+
+.form__addRoom-input {
+    width: 100%;
+    height: 38px;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 10px;
+    border-color: var(--main-color);
+    font-size: 2rem;
+    padding: 0 12px;
+}
